force-app/main/default/objects/Sponsorship__c/Sponsorship__c.object-meta.xml
<CustomObject>
    <description>One or more internship spots sponsored by a particular company (Account). Each Account might have multiple Sponsorships split across multiple teams.</description>
    <label>Sponsorship</label>
    <nameField>
        <label>Sponsorship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sponsorships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>