force-app/main/default/objects/Sponsorship__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The class that this sponsorship is available for.</description>
    <label>Class</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Sponsorships</relationshipLabel>
    <relationshipName>Sponsorships</relationshipName>
    <type>Lookup</type>
</CustomField>