force-app/main/default/objects/Sponsorship__c/fields/Cohort__c.field-meta.xml
<CustomField>
    <fullName>Cohort__c</fullName>
    <description>The cohort that this sponsorship is for.</description>
    <label>Cohort</label>
    <referenceTo>Cohort__c</referenceTo>
    <relationshipLabel>Sponsorships</relationshipLabel>
    <relationshipName>Sponsorships</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>