force-app/main/default/objects/Sponsorship__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>The company that owns this sponsorship.</description>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sponsorships</relationshipLabel>
    <relationshipName>Sponsorships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>